<resources>
    <string name="app_name">classLayout</string>
    <string name="segitiga">Segitiga</string>
    <string name="persegi">Persegi</string>
    <string name="persegipanjang">Persegi Panjang</string>
    <string name="alas">Alas</string>
    <string name="tinggi">Tinggi</string>
    <string name="tekan">Tekan</string>
    <string name="push">Push</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="laki">Laki-Laki</string>
    <string name="pr">Perempuan</string>
    <string name="dollar">Dollar</string>
    <string name="euro">Euro</string>
    <string name="input">Input</string>
    <string name="rupiah">Rupiah</string>


    <string name="country_prompt">Choose a country</string>
    <string name="note">Note</string>
    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

</resources>
