<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="linear.app.bel.classlayout.Segitiga">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/alas"
        android:hint="@string/alas"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tinggi"
        android:hint="@string/tinggi"
        />

    <Button
        android:layout_width="wrap_content"
        android:id="@+id/btn"
        android:text="@string/tekan"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/luas"
        android:layout_height="wrap_content" />


</LinearLayout>
